src/objects/c2g__codaInvoice__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpinvoice</customHelpPage>
    <description>Holds information that applies to the whole invoice such as customer account and due date.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BillingAddress__c</fullName>
        <formula>c2g__Account__r.BillingStreet + &apos; &apos; + c2g__Account__r.BillingCity + &apos; &apos; + c2g__Account__r.BillingState + &apos; &apos; + c2g__Account__r.BillingPostalCode + &apos; &apos; + c2g__Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Account Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CopyDefaultPrintedTextDefinitions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Default Printed Text Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreatingRecurringInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creating Recurring Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerReference__c</fullName>
        <description>The customer reference.</description>
        <label>Customer Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <description>The reason this Invoice was discarded.</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date the invoice is due for payment.</description>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FirstDueDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the invoice is due for the first payment.</description>
        <label>First Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GLA used for Income Schedule</description>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GenerateAdjustmentJournal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked a currency adjustment journal will be automatically generated when you post this invoice in a multi-currency environment.</description>
        <label>Generate Adjustment Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Sales Invoices (Income Schedule Group)</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Interval__c</fullName>
        <description>Payment schedule interval</description>
        <label>Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date the sales invoice was created.</description>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDescription__c</fullName>
        <description>A description of the invoice.</description>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Invoice Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceStatus__c</fullName>
        <description>The current status of the invoice.</description>
        <label>Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceTotal__c</fullName>
        <description>The total value of all the items on the invoice, including the tax.</description>
        <formula>c2g__NetTotal__c +  c2g__TaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <formula>TEXT(c2g__Transaction__r.c2g__MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NetTotal__c</fullName>
        <description>The total value of items on the invoice, before tax.</description>
        <label>Net Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__NumberOfPayments__c</fullName>
        <description>Payment schedule number of payments</description>
        <label>Number of Payments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberofJournals__c</fullName>
        <label>Number of Journals</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity to which this invoice is related.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingValue__c</fullName>
        <formula>c2g__Transaction__r.c2g__DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentScheduleTotal__c</fullName>
        <label>PaymentScheduleTotal</label>
        <summarizedField>c2g__codaInvoiceInstallmentLineItem__c.c2g__Amount__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceInstallmentLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentSchedule__c</fullName>
        <label>Payment Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Payment Schedule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( c2g__InvoiceStatus__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0,&apos;Paid&apos;,
if( c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodInterval__c</fullName>
        <label>Period Interval</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PrintStatus__c</fullName>
        <label>Print Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Printed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 1 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1Heading__c</fullName>
        <label>Printed Text 1 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1TextDefinitionName__c</fullName>
        <label>Printed Text 1 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1Text__c</fullName>
        <label>Printed Text 1 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 2 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2Heading__c</fullName>
        <label>Printed Text 2 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2TextDefinitionName__c</fullName>
        <label>Printed Text 2 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2Text__c</fullName>
        <label>Printed Text 2 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 3 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3Heading__c</fullName>
        <label>Printed Text 3 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3TextDefinitionName__c</fullName>
        <label>Printed Text 3 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3Text__c</fullName>
        <label>Printed Text 3 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxDocumentCode__c</fullName>
        <label>Sales tax document code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxStatus__c</fullName>
        <description>The current sales tax status of the invoice.</description>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Calculated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Calculated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ShippingAddress__c</fullName>
        <formula>c2g__Account__r.ShippingStreet + &apos; &apos; + c2g__Account__r.ShippingCity + &apos; &apos; + c2g__Account__r.ShippingState + &apos; &apos; + c2g__Account__r.ShippingPostalCode + &apos; &apos; + c2g__Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ShippingMethod__c</fullName>
        <description>The method of delivery.</description>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__TaxValue3__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code)</relationshipLabel>
        <relationshipName>InvoicesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code 2)</relationshipLabel>
        <relationshipName>InvoicesTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code 3)</relationshipLabel>
        <relationshipName>InvoicesTaxCode3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Usepartperiods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Part Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbext__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Invoice</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__InvoiceDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__Opportunity__c</columns>
        <columns>c2g__InvoiceCurrency__c</columns>
        <columns>c2g__InvoiceTotal__c</columns>
        <columns>c2g__PrintStatus__c</columns>
        <columns>c2g__InvoiceStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__PaymentStatus__c</columns>
        <columns>c2g__OutstandingValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__MatchType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIN{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>